feat: add batching and multithreading in sheduler