@@ -7,11 +7,15 @@ import backend.academy.scrapper.repository.model.Link;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Repository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Repository
@@ -23,16 +27,23 @@ public class JpaHibernateLinkService implements LinkRepository {
 
     @Override
     @Transactional(readOnly = true)
-    public List<Link> getLinks() {
-        List<LinkEntity> links = jpaHibernateLinkRepository.findAll();
-        return links.stream()
+    public List<Link> getLinks(int limit, int offset) {
+        Pageable pageable = PageRequest.of(offset / limit, limit, Sort.by("id"));
+        return jpaHibernateLinkRepository.findAll(pageable)
+            .getContent()
+            .stream()
             .map(entity -> new Link(
                 entity.id(),
                 entity.url(),
                 entity.description(),
                 entity.updateTime()
             ))
-            .toList();
+            .collect(Collectors.toList());
+    }
+
+    @Transactional(readOnly = true)
+    public Long countLinks() {
+        return jpaHibernateLinkRepository.count();
     }
 
     @Override
